--- a/TODO.txt
+++ b/TODO.txt
@@ -18,7 +18,7 @@ background-color: black;
 load brower history then the search_query -> DropDown
 
 
-savebattery -> remove animations and game at loading level and imgs and switch btw static html
+savebattery -> remove animations and game at loading level and imgs and switch btw static html border radius and clock and calender
 
 
 <!DOCTYPE html>
