new settings, working button for interal browser path

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,120 +4,7 @@ https://www.google.com/search?q=how%20to%20code
 https://suggestqueries.google.com/complete/search?client=firefox&q=how to code&ds=yt
 https://suggestqueries.google.com/complete/search?client=firefox&q=how to code
 
-background-color: black;
-:root{
-    ...
-}
-*{
-}
-
-<button onclick="window.location.href='https://google.com'">
-    <strong>G</strong> Google
-</button>
-
 load brower history then the search_query -> DropDown
 
 
-savebattery -> remove animations and game at loading level and imgs and switch btw static html border radius and clock and calender
-
-
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>New Tab</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <header class="quicklink">
-        <a href=""><strong>A</strong> Gmail1</a><strong> | </strong>
-        <a href=""><strong>A</strong> Gmail2</a><strong> | </strong>
-        <a href=""><strong>A</strong> Gmail3</a><strong> | </strong>
-        <a href=""><strong>A</strong> Quick Web1</a><strong> | </strong>
-        <a href=""><strong>A</strong> Quick Web2</a><strong> | </strong>
-        <button class="addquick">+</button>
-    </header>
-    <main>
-        <section class="searchandengine">
-            <section class="search">
-                <input type="text">
-                <div>
-                    <a>ABC</a><br>
-                    <a>ABC</a><br>
-                    <a>ABC</a><br>
-                    <a>ABC</a><br>
-                </div>
-            </section>
-            <section class="engine">
-                <button>
-                    <Strong>G</Strong>
-                    Google
-                </button>
-                <button>
-                    <Strong>Y</Strong>
-                    Youtube
-                </button>
-                <button>
-                    <Strong>M</Strong>
-                    Microsoft
-                </button>
-                <button>+</button>
-            </section>
-        </section>
-        <section class="shortcuts">
-            <div>
-                <button>
-                    <strong>A</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>B</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>C</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>D</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>E</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>+
-                </button>
-                Add
-            </div>
-        </section>
-    </main>
-    <footer>
-        <iframe class="game" scrolling="no" src="t-rex-runner/index.html"></iframe>
-        <div class="footleft">
-            <button onclick="toggleTheme()">Light</button>
-            <button>Save Battery</button>
-        </div>
-        <div class="footright">
-            <a href="">Extensions</a>
-            <a href="">Downloads</a>
-            <a href="">History</a>
-            <a href="">BookMarks</a>
-            <a href="">Settings</a>
-        </div>
-    </footer>
-    <script src="script.js" defer></script>
-</body>
-
-</html>
+savebattery -> remove animations and game at loading level and imgs and switch btw static html border radius and clock and calender and black only
